--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,685 +1,42 @@
-@font-face{
-  font-family:Poppins-Bold;
-  src:url('../app/fonts/Poppins-Bold.ttf');
-}
-@font-face{
-  font-family:Poppins-Light;
-  src:url('../app/fonts/Poppins-Light.ttf');
-}
-@font-face{
-  font-family:Poppins-Regular;
-  src:url('../app/fonts/Poppins-Regular.ttf');
-}
-body{
-  padding: 0px;
-  margin: 0px;
-  font-family:Poppins-Regular !important;
-  font-size: 14px !important;
-}
-h1, h2, h3, h4 { 
-  font-family:Poppins-Bold !important;
- }
- p{
-  font-family:Poppins-Regular !important;
- }
-ul{
-  padding: 0px !important;
-  margin: 0px !important;
-}
-li{
-  list-style-type: none;
-}
-img{
-  height: auto;
-}
-a{
-  text-decoration: none !important;
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
-.header-top-frame_main{
-  background:#222222;
-  padding: 20px 0px;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
 }
-.header-bottom-frame_main{
-  background: #000000;
-}
-.header-top-frame{
-  display: flex;
-  justify-content: space-between;
-}
-.header-top-frame .header-top-left{
-  width: 15%;
-}
-.header-top-frame .header-top-left img{
-  width:100%;
-}
-.header-top-frame .header-top-right{
-  width: 80%;
-}
-.header-top-right ul{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.header-top-right ul li{
-  display: flex;
-  justify-content: space-between;
-  width: 26%;
-  justify-content: space-between;
-  padding: 0px 20px;
-}
-.header-top-right ul li:last-child{
-  width: 20%;
-  float: right;
-  justify-content: end;
-  align-items: end;
-  display: grid;
-  padding: 0px 0px;
-}
-.header-top-right ul li .header-top-right-right{
-  padding-left: 15px;
-}
-.header-top-right ul li img{
-  width: 15px;
-}
-.header-top-right ul li h5{
-  color: #FF7518;
-  font-weight: bold;
-  font-size: 16px;
-}
-.header-top-right ul li p{
-color: #727272;
-margin-bottom: 0px;
-}
-.header-top-right ul li a{
-  background: #FF7518 0% 0% no-repeat padding-box;
-  border-radius: 5px;
-  color: #fff;
-  height: -moz-fit-content;
-  height: fit-content;
-  margin: 0 auto;
-  padding: 7px 15px;
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
-.header-bottom-frame_main-middle{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.header-bottom-frame_main-middle-left{
-  width: 70%;
-  padding-left: 16%;
 
+body {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-.header-bottom-frame_main-middle-left ul{
-  padding: 0px !important;
-  display: flex;
-  justify-content: space-between;
-  width: 85%;
-  align-items: center;
-    height: 100%;
-}
-.header-bottom-frame_main-middle-left ul li{
-  background: #000000;
-    padding: 20px 0px;
-}
-.header-bottom-frame_main-middle-left ul li a{
-  color: #707070;
-  font-weight: 600;
-  font-size: 15px;
-}
-.header-bottom-frame_main-middle-left ul li a:hover{
-  color: #FF7518;
-} 
-.header-bottom-frame_main-middle-right{
-  width: 30%;
-  padding-left: 0%;
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-.header-sech-frame{
-  position: relative;
-}
-.header-sech-frame input{
-  background: #222222 0% 0% no-repeat padding-box;
-  border-radius: 20px;
-  opacity: 1;
-  height: 39px;
-  width: 100%;
-  border: 0px;
-}
-.header-sech-frame img{
-  position: absolute;
-  right: 20px;
-  width: 21px;
-  top: 11px
-}
-footer{
-  background: #000;
-  padding: 20px 0px;   
-  margin-top: 0px;
-}
-.footer-middle{
-  display: flex ;
-      background: #222222;
-      padding: 40px;
-      border-radius: 25px;
-      margin: 60px 0px;
-}
-.footer-middle-right{
-  display: flex;
-  flex-wrap: wrap;
-  width: 40%;
-}
-.footer-middle-r{
-  width: 50%;
-  margin-bottom: 40px;
-}
-.footer-middle-r:nth-child(3){
-  margin-bottom: 0px;
-}
-.footer-middle-r:nth-child(4){
-  margin-bottom: 0px;
-}
-.footer-middle-r h4{
-  color: #707070;
-  font-size: 16px;
-}
-.footer-middle-r ul{
-  margin-top: 15px !important;
-}
-.footer-middle-r ul li{
-  
-}
-.footer-middle-r ul li a{
-  letter-spacing: 0px;
-    color: #FFFFFF;
-    line-height: 34px;
-}
-.footer-middle-r ul li a:hover{
-  color: #FF7518;
-}
-.footer-middle-left{
-  width: 60%;
-}
-.footer-middle-left h4{
-  color: #fff;
-  font-size: 32px;
-}
-.footer-middle-left h4 span{
-  color: #FF7518;
-}
-.footer-middle-left p{
-  color: #FFFFFF;
-  margin-top: 25px;
-}
-.footer-middle-left p span{
-  display: block;
-}
-.footer-middle-left .footer-middle-left-search{
-  
-}
-.footer-middle-left .footer-middle-left-search input{
-  background: #F2F2F2 0% 0% no-repeat padding-box;
-  border-radius: 20px;
-  width: 55%;
-  display: block;
-  border: 0px;
-  height: 42px;
-  margin-top: 25px;
-  margin-bottom: 30px;
-}
-.footer-middle-left .footer-middle-left-search button{
-  background: #FF7518 0% 0% no-repeat padding-box;
-  border-radius: 5px;
-  height: 45px;
-  color: #fff;
-  border: 0px;
-  width: 150px;
-}
-.footer-middle-left a img{
-  width: 230px;
-  margin-top: 45px;
-}
-.Begin-Your-Funding-Journey-middle-left{
-  border: 2px solid #FF7518;
-  border-bottom: 0px;
-border-radius: 100px 200px 0px 0px;
-width: 60%;
-display: flex;
-position: relative;
-}
-.Begin-Your-Funding-Journey-middle-left-left h4{
-  color: #fff;
-  font-size: 32px;
-}
-.Begin-Your-Funding-Journey-middle-left-left h4 span{
-  color: #FF7518;
-} 
-.Begin-Your-Funding-Journey-middle-left-left p{
-  color: #fff;
-  padding-left: 50px;
-  margin-top: 60px;
-  padding-right: 50px;
-}
-.Begin-Your-Funding-Journey-middle-left-left p a{
-  background: #FF7518 0% 0% no-repeat padding-box;
-  border-radius: 5px;
-  color: #fff;
-  height: -moz-fit-content;
-  height: fit-content;
-  margin: 0 auto;
-  padding: 7px 15px;
-  margin-top: 10px;
-  display: inline-block;
-} 
-.Begin-Your-Funding-Journey-middle-left-left p a img{
-  width: 12px;
-  margin-left: 15px;
-}
-.Begin-Your-Funding-Journey{
-  background: #222222;
-  padding: 80px 0px 0px 0px;
-  position: relative;
-}
-.Begin-Your-Funding-Journey-middle-left-left{
-  padding: 100px 70px 110px 70px ;
-  width: 80%;
-}
-.Begin-Your-Funding-Journey-middle-left-right img{
-  width: 55%;
-  position: absolute;
-  right: 0px;
-  right: -80px;
-  bottom: -1px;
-  z-index: 1111;
-}
-.Begin-Your-Funding-Journey-right-icon{
-  text-align: center;
-  background: #707070 0% 0% no-repeat padding-box;
-  border-radius: 200px 0px 0px 0px;
-  position: absolute;
-  width: 54%;
-  bottom: 0px;
-  right: 0px;
-  z-index: 1;
 
+a {
+  color: inherit;
+  text-decoration: none;
 }
-.Begin-Your-Funding-Journey-right-icon img{
-  width: 170px;
-    padding: 60px 0px;
-    padding-left: 0%;
-    margin-left: 20%;
-}
-.Begin-Your-Funding-Journey-middle{
-  position: relative;
-}
-.Begin-Your-Funding-Journey-right-icon2{
-  position: absolute;
-  top: 0px;
-  right: 90px;
-}
-.Begin-Your-Funding-Journey-right-icon2 img{
-  width: 70px;
-}
-.Insights-Industry-Trends{
-  background: #222222;
-  padding:80px 0px 0px 0px;
-  position: relative;
-}
-.Insights-Industry-Trends h4{
-  text-align: center;
-  color: #fff;
-  font-size: 32px;
-}
-.Insights-Industry-Trends h4 span{
-  color: #FF7518;
-}
-.Insights-Industry-Trends p{
-  color: #fff;
-  margin-bottom: 0px;
-  text-align: center;
-  margin-top: 30px;
-}
-.Insights-Industry-Trends p span{
-  display: block;
-}
-.testimonial-frame-right img{
-  width: 100%;
-}
-.testimonial-frame-right p:nth-child(2){
-  color: #707070;
-    font-weight: 600;
-    font-size: 16px;
-    text-align: left;
-    width: 90%;
-}
-.testimonial-frame-right p img{
-  width: 20px;
-    float: right;
-    margin-right: 20px;
-}
-.testimonial-frame-right{
-  background: #000000 0% 0% no-repeat padding-box;
-  border-radius: 25px;
-  padding: 10px 10px;
-  width: 90%;
-  margin: 0 auto;
-}
-.testimonial-frame-right p:nth-child(3){
-  display: inline-block;
-  width: 100%;
-  margin-top: 0px
-}
-.rain-main-images-main{
-  margin-top: 50px;
-}
-.Empowering-Staffing-Companies{
-  background: #000;
-}
-.Empowering-Staffing-Companies-middle{
-  display: flex;
-  padding-top: 30px;
-    padding-bottom: 30px;
-}
-.Empowering-Staffing-Companies-middle-left{
-  width: 32%;
-}
-.Empowering-Staffing-Companies-middle-right{
-  width: 45%; 
-}
-.Empowering-Staffing-Companies-middle-left h4{
-  color: #fff; 
-  font-size: 32px; 
-  line-height: 40px;
-}
-.Empowering-Staffing-Companies-middle-left span{
-  color: #FF7518; 
-}
-.Empowering-Staffing-Companies-middle-right{
 
-}
-.Empowering-Staffing-Companies-middle-right p{
-  color: #F2F2F2;
-}
-.Empowering-Staffing-Companies-middle-right a{
-  background: #FF7518 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    color: #fff;
-    height: -moz-fit-content;
-    height: fit-content;
-    margin: 0 auto;
-    padding: 7px 15px;
-    margin-top: 10px;
-    display: inline-block;
-}
-.marqu-main-frame{
-  display: flex;
-}
-.marqu-main-frame-img{
-width: 15%;
-}
-.marqu-main-frame-img img{
-width: 100%;
-}
-.marqu-main-frame-img-cont{
-position: relative;
-background: #FF7518 0% 0% no-repeat padding-box;
-border-radius: 25px;
-width: 400px;
-padding: 40px;
-margin-left: 40px;
-margin-right: 40px;
-}
-.marqu-main-frame-img-cont h4{
-  color: #fff;
-  font-size: 34px;
-  line-height: 55px;
-}
-.marqu-main-frame-img-cont p{
-  color: #fff;
-  width: 80%;
-  margin-top: 40px;
-}
-.marqu-main-frame-img-cont p a{
-  
-}
-.marqu-main-frame-img-cont p a img{
-  width: 25px;
-  position: absolute;
-  bottom: 30px;
-  right: 35px;
-}
-.rfm-marquee-container {
-  padding-bottom: 70px;
-}
-.rfm-marquee-container:hover .rfm-marquee{
-  animation-play-state: paused;
-}
-.Reliable-Funding-When-You-Need{
-  background: #000000;
-  padding-top: 0px;   
-  padding-bottom: 60px;
-}
-.Reliable-Funding-When-You-Need-middle{
-  display: flex;
-}
-.Reliable-Funding-When-You-Need-middle-left{
-  width: 40%;
-}
-.Reliable-Funding-When-You-Need-middle-left-header h4{
-  color: #fff;
-  font-size: 32px;
-}
-.Reliable-Funding-When-You-Need-middle-left-header h4 span{
-  color: #FF7518;
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont{
-  padding-left: 50px;
-  margin-top: 60px;
-  padding-right: 50px;
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont p{
-  color: #F2F2F2; 
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont p a{
-  background: #FF7518 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    color: #fff;
-    height: -moz-fit-content;
-    height: fit-content;
-    margin: 0 auto;
-    padding: 7px 15px;
-    margin-top: 10px;
-    display: inline-block;
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom{
-  display: flex;
-      background: #222222 0% 0% no-repeat padding-box;
-      border-radius: 25px;
-      opacity: 1;
-      padding: 30px 30px;
-    justify-content: space-between;
-   margin-top: 100px;
-   transform: translate(0px,0px);
-   transition: transform 1s ease-in-out;
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom:hover{
-  transform: translate(0px,-25px);
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom.two{
-  transform: translate(45px,0px);
-  margin-top: 0px;
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom.two:hover{
-  transform: translate(-15px,0px); 
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom-to-left h4{
-  color: #FF7518;
-  font-size: 18px;
-  font-weight: 600;
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom-to-left p{
-  color: #F2F2F2;
-  margin-top: 20px;
-  margin-bottom: 0px;
-} 
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom-to-right img{
-  width: 90px;
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom-to-left{
-width: 70%;
-}
-.Reliable-Funding-When-You-Need-middle-left-header-cont-bottom-to-right{
-  width: 20%;
-}
-.Reliable-Funding-When-You-Need-middle-right{
-  width: 45%;
-  padding-left: 3%;
-}
-.Rapid-Fund-Processing-main{
-  display: flex;
-  width: 107%;
-}
-.Rapid-Fund-Processing-main-left{
-width: 50%;
-}
-.Rapid-Fund-Processing-main-right{
-  width: 46%;
-  margin-left: 4%;
-  margin-top: 22%; 
-}
-.Rapid-Fund-Processing-main-left-middl{
-  background: #222222 0% 0% no-repeat padding-box;
-    border-radius: 25px;
-    padding: 30px 30px;
-    margin-top: 50px;
-}
-.Rapid-Fund-Processing-main-left-middl h4{
-  color: #FF7518;
-  font-size: 18px;
-  font-weight: 600;
-}
-.Rapid-Fund-Processing-main-left-middl p{
-  color: #F2F2F2;
-  margin-top: 20px;
-  margin-bottom: 0px;
-}
-.Rapid-Fund-Processing-main-left-middl img{
-  width: 55px;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-}
-.Rapid-Fund-Processing-main-left-middl img.Hover{
-  display: none;
-}
-.Rapid-Fund-Processing-main-left-middl:hover img.Hover{
-display: block;
-} 
-.Rapid-Fund-Processing-main-left-middl.twoo img{
-  right: -13px;
-    bottom: -12px;
-}
-.Rapid-Fund-Processing-main-left-middle{
-  display: flex;
-  justify-content: space-between;  
-  position: relative;  
-}
-.Rapid-Fund-Processing-main-left-middle-left{
-  width: 70%;
-}
-.Rapid-Fund-Processing-main-right-midl{
-  background: #222222 0% 0% no-repeat padding-box;
-    border-radius: 25px;
-    padding: 30px 30px;
-    transform: translate(0px, 0px);
-    transition: transform 1s ease-in-out;
-}
-.Rapid-Fund-Processing-main-right-midl:hover{
-  transform: translate(0px, -25px);
-}
-.Rapid-Fund-Processing-main-right-midl img{
-  width: 65px;
-  margin-bottom: 35px;
-}
-.Rapid-Fund-Processing-main-right-midl h4{
-  color: #FF7518;
-    font-size: 18px;
-    font-weight: 600;
-}
-.Rapid-Fund-Processing-main-right-midl p{
-  color: #fff;
-}
-.Rapid-Fund-Processing-main-left-middl:hover{
-  background: #FF7518;
-}
-.Rapid-Fund-Processing-main-left-middl:hover h4{
-  color: #fff;
-}
-.Your-Trusted-Partner-for-Payroll-Funding{
-  background: #000;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-middle{
-  display: flex;
-  justify-content: space-between;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-left{
-  width: 40%;
-  display: flex;
-  background: #FF7518;
-  border-radius: 25px;
-
-}
-.Your-Trusted-Partner-for-Payroll-Funding-right{
-  width: 55%;
-  display: flex;
-  background: #222222;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-left-left{
-  width: 100%;
-  padding: 8%;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-left-right{
-  width: 40%;
-  display: none;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-left-right img{
-  width: 100%;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-left-left h4{
-  color: #fff;
-  font-size: 32px;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-left-left p{
-  color: #fff;
-  margin-top: 50%;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-right-left h4{
-  color: #fff;
-  font-size: 32px;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-right-left ul{
-
-}
-.Your-Trusted-Partner-for-Payroll-Funding-right-left ul li{
-  color: #fff;
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-right-left ul li img{
-  width: 18px;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-right-left{
-  padding: 8%;
-}
-.Your-Trusted-Partner-for-Payroll-Funding-right-right {
-
-}
-.Your-Trusted-Partner-for-Payroll-Funding-right-right img{
-  width: 100%;
-}
-@media all and (min-width:120px) and (max-width:680px){
-
-  
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
 }
