--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -830,10 +830,11 @@ display: none;
 .What-Our-Clients-Say{
   padding: 80px 0px;
   background: #3C3C3C;
+  position: relative;
 }
 .Our-Clients-middle{
   display: flex;
-  justify-content: space-between;
+ 
 }
 .Our-Clients-middle-left h4{
   color: #fff;
@@ -850,28 +851,85 @@ display: none;
   width: 25%;
 }
 .Our-Clients-middle-right{
-  width: 70%;    
+  width: 53%;
+  margin-left: 4%;
+  position: relative;
+  z-index: 99999;
 }
 .test-midl-f{
 display: flex;
 background: #E4E4E4 0% 0% no-repeat padding-box;
-box-shadow: 25px 25px 25px #0000002B;
+
 border-radius: 25px;
 opacity: 1;
+padding: 30px;
+width: 85%;
+margin: 0 auto;
+margin-bottom: 30px;
 }
 .test-midl-f-left{
-width: 20%;
+  width: 26%;
+  position: relative;
+  left: -73px;
 }
 .img-ggh img{
   width: 20px !important;
   } 
 .test-midl-f-right{
-
+  width: 75%;
+    position: relative;
 }
 .client-say-frame .carousel.carousel-slider .control-arrow{
   display: none !important;
 }
-
+.test-midl-f-right p:nth-child(2){
+  font-weight: 600;
+    font-size: 16px;
+    text-align: left;
+}
+.test-midl-f-right p:nth-child(3){
+    font-size: 14px;
+    text-align: left;
+}
+.img-ggh img.left-img{
+  position: absolute;
+  left: -35px;
+}
+.img-ggh img.right-img{
+  position: absolute;
+  right: 100px;
+  bottom: 50px;
+}
+.What-Our-Clients-Say .carousel .carousel-status{
+  display: none !important;
+}
+.What-Our-Clients-Say .carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover{
+  width: 40px;
+    height: 10px;
+    background: #FF7518 0% 0% no-repeat padding-box;
+    border-radius: 7px;
+    opacity: 1;
+    transition: initial;
+    box-shadow: initial;
+}
+.What-Our-Clients-Say .carousel .control-dots .dot{
+  width: 40px;
+    height: 10px;
+    background: #fff 0% 0% no-repeat padding-box;
+    border-radius: 7px;
+    opacity: 1;
+    transition: initial;
+    box-shadow: initial;
+}
+.client-name-right-mig{
+  position: absolute;
+  top: 17%;
+  width: 21%;
+  right: 0px;
+}
+.client-name-right-mig img{
+width: 100%;
+}
 @media all and (min-width:120px) and (max-width:680px){
 
   
