--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -558,7 +558,7 @@ width: 70%;
 }
 .Reliable-Funding-When-You-Need-middle-right{
   width: 45%;
-  padding-left: 3%;
+  padding-left: 50px;
 }
 .Rapid-Fund-Processing-main{
   display: flex;
@@ -569,7 +569,7 @@ width: 50%;
 }
 .Rapid-Fund-Processing-main-right{
   width: 46%;
-  margin-left: 4%;
+  margin-left:50px;
   margin-top: 22%; 
 }
 .Rapid-Fund-Processing-main-left-middl{
