--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -314,7 +314,7 @@ position: relative;
   bottom: 0px;
   right: 0px;
   z-index: 1;
-
+height: 400px;
 }
 .Begin-Your-Funding-Journey-right-icon img{
   width: 170px;
@@ -774,22 +774,23 @@ display: none;
   margin: 0 auto !important;
   margin-top: 50px !important;
   padding: 5px 11px !important;
+  width: max-content;
 }   
 
 .tab-view .react-tabs__tab--selected {
   color: #FF7518 !important;
   border-radius: 5px 5px 0 0;
   background: #222222 0% 0% no-repeat padding-box;
-  border: 0px solid #000000;
+  border: 0px solid #000000; 
   border-radius: 100px;
   opacity: 1;
 }      
 .tab-view .react-tabs__tab{
-
   color: #727272;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 600;
-  padding: 10px 30px;
+  padding: 10px 25px !important;
+  border: 0px solid #000000; 
 }   
 .tab-view  .react-tabs__tab:focus { margin:0px !important;outline: none; border: 0px !important;    padding: 10px 30px !important;}     
 
