--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -304,23 +304,24 @@ position: relative;
   right: -80px;
   bottom: -1px;
   z-index: 1111;
+  display: none;
 }
 .Begin-Your-Funding-Journey-right-icon{
   text-align: center;
-  background: #707070 0% 0% no-repeat padding-box;
+ 
   border-radius: 200px 0px 0px 0px;
   position: absolute;
-  width: 54%;
+  width: 50%;
   bottom: 0px;
   right: 0px;
   z-index: 1;
-height: 400px;
+  height: auto;
 }
 .Begin-Your-Funding-Journey-right-icon img{
-  width: 170px;
-    padding: 60px 0px;
-    padding-left: 0%;
-    margin-left: 20%;
+  width: 100%;
+  padding: 0px 0px;
+  padding-left: 0%;
+  margin-left: 0px;
 }
 .Begin-Your-Funding-Journey-middle{
   position: relative;
@@ -1071,13 +1072,13 @@ display: none;
   width: 29%;
 }
 .two-two{
-  display: none;
+
 }
 .Begin-Your-Funding-Journey-right-icon:hover .one-one{
- display: none;
+
 }
 .Begin-Your-Funding-Journey-right-icon:hover .two-two{
-  display: inline;                              
+                              
  }
  .Accelerate-Your-Business-frame{
   padding: 50px 0px;
